# gestion-commerciale

./: .gitignore  create_database.sh  fix-liste-decomptes.sh  package-lock.json  package.json  vite.config.ts
src/: App.tsx  ErrorBoundary.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/commands/: clients.rs  configuration.rs  mod.rs  products.rs
src-tauri/src/: lib.rs  lib.rs.backup  main.rs
src-tauri/src/database/: schema.sql
src/components/: DebugWrapper.tsx  DiagnosticDB.tsx  MigrationManager.tsx
src/components/auth/: Login.tsx  Register.tsx
src/components/caisse/: ChargesFonctionnement.tsx  JournalCaisse.tsx
src/components/clients/: FormulaireClient.tsx  (+1 more)
src/contexts/: AuthContext.tsx
src/database/: backupManager.ts  db.ts  migrations.ts  runMigration.ts  schema.sql  versionManager.ts
src/hooks/: useAtelierConfig.ts  useClients.ts  useCommandes.ts  useDebug.ts  useDecomptes.ts  useFactures.ts  useProducts.ts  useReglements.ts  useSales.ts
src/services/: ClientService.ts  CommandeService.ts  DecompteService.ts  FactureService.ts  MouvementService.ts  ProductService.ts  RecuDecompteService.ts  StockRevendeurService.ts  StockService.ts  TransactionService.ts  backupService.ts  codeGeneratorService.ts  commandeRevendeurService.ts  configCommerceService.ts  debugService.ts  importService.ts  journalCaisseService.ts  pdfService.ts  userService.ts
src/types/: Commande.ts  Decompte.ts  Facture.ts  auth.ts  client.ts  permissions.ts
src/utils/: codeGenerator.ts  confirm.ts  logger.ts
(+63 files in other folders)
