[package]
name = "gestion-commerciale"
version = "0.1.0"
description = "Application de gestion commerciale"
authors = ["you"]
edition = "2021"

[lib]
name = "gestion_commerciale_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
